# ApplierAI

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: scrape-prmary.yml  scrape-secondary.yml
app/(auth)/: layout.tsx
app/(dashboard)/: layout.tsx
app/(dashboard)/jobs/: page.tsx
app/api/jobs/: routes.ts
app/api/jobs/[id]/: routes.ts
components/: dashboardnav.tsx
components/jobs/: jobcard.tsx  jobdetail.tsx  jobfeed.tsx  jobfilter.tsx
components/ui/: dashboard-nav.tsx
config/: cover_template.txt  platforms.yaml  preferences.yaml  profile.yaml
dashboard/: package.json
dashboard/app/: global.css  layout.ts  page.ts  providers.ts
dashboard/app/jobs/: page.tsx
dashboard/app/jobs/_components/: JobCard.tsx  JobFeed.tsx  JobFilters.tsx
dashboard/hooks/: useJobs.ts  useScrape.ts
dashboard/lib/: api.ts
infra/: docker-compose.yml  supabase_schema.sql
infra/migrations/: 001_jobs_table.sql
lib/scoring/: index.test.tsx  index.tsx
lib/supabase/: client.ts  index.ts  middleware.ts  server.ts
scripts/scraper/: index.ts  normalize.ts  upsert.ts
scripts/scraper/sources/: arbeitnow.ts  ashby.ts  greenhouse.ts  himalayas.ts  lever.ts  remoteok.ts  remotive.ts  weworkremotely.ts
supabase/seed/: 001_companies.sql
types/: app.ts  db.ts
