[project]
name = "job-applier-2026"
version = "0.1.0"
description = "AI-powered job application automation system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = [
    "packages/core",
    "packages/scraper",
    "packages/orchestrator",
    "packages/browser",
    "packages/api",
]

[tool.uv.dev-dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.23"
ruff = ">=0.5"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
